its filename extention).
* Added missing sudo to cleanup function.
* Removed unused clean script (and made sure that the other scripts use the
clean function).
* Converted checkBuild to function and removed script.
* Made the error function take a message parameter.
* Updated the bzr push command for svn.
* Fixed failing test for new "none" check.

2008.07.18

* Added more admin scripts.

2008.07.16

* Applied a patch from Moshe Zadka: "When getting a long reply, the client
library, using code from xmlrpclib, will attempt to call feed multiple times
with partial messages. The supplied parser assumes feed will only be called
with a complete message."

2008.06.15

* Added Fault class.
* Updated SimpleParser to properly return results when using jsonrpclib
(synchronous, blocking code).
* Added Transport and ServerProxy.
* Added web example (in addition to the already-extant web2 example).
* Removed extraneous print/debug code.
* Incremented version number.
* Added missing NOT_FOUND to web.jsonrpc.
* Updated the version number.

2008.06.14

* Removed extraneous while space.
* Added NoSuchFunction class.

2008.06.11

* Updated the commit script to work with bzr-svn.
* Added a path hack to commit.sh for running trial.
* Renamed adytum to txjsonrpc.
* Moved web and web2 up and renamed twisted to netstring.
* Removed .pyc files.
* Tweaked the commit script.
* Added license.
* Removed ez_setup.py.
* Updated TODO.
* Renamed the main package from adytum to txjsonrpc.
* Updated setup.py.
* Removed ez_setup support.
* Removed setuptools support.
* Changed to the new way of flushing logs in twisted.trial.
* Adjusted tests to use the new package and subpackage names.
* Adjusted examples to use the new package and subpackage names.
* Incremented the version number.
* Removed trial path hack from commit.sh.
* Test commit to svn and bzr from a freshly checked out branch.
* Cool! It worked. Removed testfile.
* Changed the commit script to point to 'main' on launchpad.